--- a/InternApplication/src/main/resources/application.properties
+++ b/InternApplication/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port = 8081
 
 
-#spring.datasource.url=jdbc:postgresql://10.77.52.22:5432/applications
+#spring.datasource.url=jdbc:postgresql://10.77.52.22:5432/applications   postgress
 spring.datasource.url=jdbc:postgresql://localhost:5432/applications
 spring.datasource.username=postgres
 spring.datasource.password=postgress
